--- a/management/css/manage.css
+++ b/management/css/manage.css
@@ -2,14 +2,14 @@
 body{
     background:url(../img/bg.jpg) no-repeat center fixed;
     background-size:100% 100%; 
-    height: 600px;
+    height: auto;
     margin: 0 auto;
     padding: 0;
 }
 
 #main{
     width: 1350px;
-    height: 600px;
+    height: auto;
    position: absolute;
    top: 25%;
 }
