--- a/html/detailsHtml/css/details.css
+++ b/html/detailsHtml/css/details.css
@@ -48,7 +48,7 @@ li{list-style-type: none}
 .header{z-index: 999999; width: 100%; height: 70px; background: #fff; position: fixed; top: 0; box-shadow: 0 3px 3px rgba(0, 0, 0, .16)}
 .headerContent{ height: 100%; width: 80%; background: none; margin: 0 auto; }
 .siteName{width: 140px; height: 100%; background: none; float: left; }
-.siteName a { color: #000!important; }
+.siteName a {color: #000!important; }
 .siteName img{display: block; padding: 18px; float: left}
 .siteName span{float: left; text-align: center; padding: 24px 0; font: 800 20px/21.5px '宋体'; letter-spacing: .1em; text-shadow: 0 0 10px rgba(0, 0, 0, .1)}
 .siteContents{width: 340px; height: 100%; float: right; background: none; display: flex; flex-wrap: nowrap; text-align: center; }
@@ -180,10 +180,17 @@ li{list-style-type: none}
     75%{opacity: 1; box-shadow: 0 3px 18px rgba(232,10, 79, .93); -khtml-opacity: 1;}
     100%{opacity: .6; box-shadow: 0 3px 8px rgba(232,10, 79, .93); -khtml-opacity: .6;}  
     }
+@keyframes CityBlin{
+    0%{opacity: .6; box-shadow: 0 3px 8px rgba(87,172, 246, .93); -khtml-opacity: .6;}
+    25%{opacity: 1; box-shadow: 0 3px 18px rgba(87,172, 246, .93); -khtml-opacity: 1;}
+    50%{opacity: 1; box-shadow: 0 3px 18px rgba(87,172, 246, .93); -khtml-opacity: 1;}
+    75%{opacity: 1; box-shadow: 0 3px 18px rgba(87,172, 246, .93); -khtml-opacity: 1;}
+    100%{opacity: .6; box-shadow: 0 3px 8px rgba(87,172, 246, .93); -khtml-opacity: .6;}  
+    }
 .ulSUGGEST.noInfo::after, .ulTRAIN.noInfo::after, .ulBUS.noInfo::after, .ulPLANE.noInfo::after, .ulSHIP.noInfo::after{content: "暂无查询结果"; display: block; background: white; margin: -40px auto; text-align: center; font: 200 20px/20px '微软雅黑'; position: relative; z-index: 99; height: 60px; padding-top: 30px; letter-spacing: .08em; text-indent: .08em; text-shadow: 0 0 6px rgba(0, 0, 0, .08); border-bottom: 1px dashed blue; box-shadow: 0 5px 5px rgba(0, 0, 0, .08)}
-.ulSUGGEST.noInfo::before, .ulTRAIN.noInfo::before, .ulBUS.noInfo::before, .ulPLANE.noInfo::before, .ulSHIP.noInfo::before{content: ""; display: block; background: blue url('../img/bug.svg') no-repeat center; background-size: 22px; border-radius: 3px; box-shadow: 0 3px 8px #0000ffee; height: 28px; width: 28px; position: absolute; z-index: 99999; margin: 30px 0; left: calc(50% - 14px); animation: 5s starBlin infinite}/**/
+.ulSUGGEST.noInfo::before, .ulTRAIN.noInfo::before, .ulBUS.noInfo::before, .ulPLANE.noInfo::before, .ulSHIP.noInfo::before{content: ""; display: block; background: blue url('../img/bug.svg') no-repeat center; background-size: 22px; border-radius: 3px; box-shadow: 0 3px 8px rgba(0, 0, 255, .93); height: 28px; width: 28px; position: absolute; z-index: 99999; margin: 30px 0; left: calc(50% - 14px); animation: 5s starBlin infinite}/**/
 .ulSUGGEST.noresult::before{content: "当前无推荐，请切换标签"; display: block; background: white; margin: -40px auto; text-align: center; font: 200 20px/20px '微软雅黑'; position: relative; z-index: 99; height: 60px; padding-top: 30px; letter-spacing: .08em; text-indent: .08em; text-shadow: 0 0 6px rgba(0, 0, 0, .08); border-bottom: 1px dashed #e80a4f; box-shadow: 0 5px 5px rgba(0, 0, 0, .08)}
-.ulSUGGEST.noresult::after{content: ""; display: block; background: #e80a4f url('../img/archive.svg') no-repeat center; background-size: 22px; border-radius: 3px; box-shadow: 0 3px 8px #e80a4fee; height: 28px; width: 28px; position: absolute; z-index: 99999; margin: 50px 0; left: calc(50% - 14px); animation: 4s archieveBlin infinite}
+.ulSUGGEST.noresult::after{content: ""; display: block; background: #e80a4f url('../img/archive.svg') no-repeat center; background-size: 22px; border-radius: 3px; box-shadow: 0 3px 8px rgba(232, 10, 79, .93); height: 28px; width: 28px; position: absolute; z-index: 99999; margin: 50px 0; left: calc(50% - 14px); animation: 4s archieveBlin infinite}
 .ulTRAIN{display: none; width: 100%; min-height: 200px; background: #f5f5f5}
 .ulBUS{display: none; width: 100%; min-height: 200px; background: #f5f5f5}
 .ulPLANE{display: none; width: 100%; min-height: 200px; background: #f5f5f5}
@@ -212,8 +219,10 @@ li{list-style-type: none}
 .lists.Normal .moreTags .moreTagsRight{float: right; display: flex; align-items: center; width: 10%; height: 100%; background: none}
 .lists.Normal .moreTags .moreTagsLeft div{float: left; height: 20px; margin: 10px; border-radius: 5px; border-bottom-left-radius: 0; text-align: center; line-height: 20px; color: white; font-weight: 200; font-size: 12px; letter-spacing: 1px; text-indent: 1px}
 .lists.Normal .moreTags .moreTagsLeft .tg1{background: #eee; width: 24px}
-.lists.Normal .moreTags .moreTagsLeft .tg2{background: #eee; width: 38px;}
+.lists.Normal .moreTags .moreTagsLeft .tg2, {background: #eee; width: 38px;}
+.lists.Normal .moreTags .moreTagsLeft .Jtg2{background: #eee; width: 60px}
 .lists.Normal .moreTags .moreTagsLeft .tg3{background: #efefef; width: 60px}
+.lists.Normal .moreTags .moreTagsLeft .Jtg3{background: #eee; width: 60px}
 .lists.Normal .moreTags .moreTagsLeft .tg4{display: flex; float: left; background: none; height: 100%; align-items: center}
 .tt1, .tt2, .tt3, .tt4{display: block; float: left; background: none; margin: 0 4px; border-radius: 3px}
 /*此处可更改交通工具图标颜色【tt1(火车), tt2(汽车), tt3(飞机), .tt4(轮船)】*/
@@ -283,7 +292,9 @@ JZC  JZLC  ZC  JLC  JLQF  JLQFC          C
 /* !!!!!!!! 标签激活颜色 !!!!!!!!*/
 /* 【荐 J 】 */.lists.Normal.J .moreTags .moreTagsLeft .tg1{background: #e80a4f; box-shadow: 0 0 3px rgba(0, 0, 0, .16)}
 /* 【直达 Z 】 */.lists.Normal.Z .moreTags .moreTagsLeft .tg2{background: #0acee8; box-shadow: 0 0 3px rgba(0, 0, 0, .16)}
+.lists.Normal.zuidi .moreTags .moreTagsLeft .Jtg2{background: orange; box-shadow: 0 0 3px rgba(0, 0, 0, .16)}
 /* 【路线最短 L 】 */.lists.Normal.L .moreTags .moreTagsLeft .tg3{background: #00e0ac; box-shadow: 0 0 3px rgba(0, 0, 0, .16)}
+.lists.Normal.zuiduan .moreTags .moreTagsLeft .Jtg3{background: cornflowerblue; box-shadow: 0 0 3px rgba(0, 0, 0, .16)}
 /* 【火车 H 】 */.lists.Normal.H .moreTags .moreTagsLeft .tg4 .tt1{background: #26a69a; box-shadow: 0 0 3px rgba(0, 0, 0, .16)}
 /* 【汽车 Q 】 */.lists.Normal.Q .moreTags .moreTagsLeft .tg4 .tt2{background: #f9e842; box-shadow: 0 0 3px rgba(0, 0, 0, .16)}
 /* 【飞机 F 】 */.lists.Normal.F .moreTags .moreTagsLeft .tg4 .tt3{background: #42a5f5; box-shadow: 0 0 3px rgba(0, 0, 0, .16)}
