--- a/html/detailsHtml/css/transCity.css
+++ b/html/detailsHtml/css/transCity.css
@@ -8,6 +8,8 @@
 .zLeft div:nth-child(4){float: left; min-width: 40px; height: 100%; font-weight: 400; padding: 0 5px}
 .title{float: left; text-shadow: 0 0 5px rgba(0, 0, 0, .2)}
 .ulTRANSCITIES{width: 100%; display: table; margin: 0 auto; padding: 5px; background: #f5f5f5}
+.ulTRANSCITIES.noCity::after{content: ""; display: block; background: #57acf6 url('../img/archive.svg') no-repeat center; background-size: 22px; border-radius: 3px; box-shadow: 0 3px 8px rgba(232, 10, 79, .93); height: 28px; width: 28px; position: absolute; z-index: 99999; margin: 20px 0; left: calc(50% - 14px); animation: 4s CityBlin infinite}
+.ulTRANSCITIES.noCity::before{content: "查询无结果，尝试更换地点"; display: block; background: white; margin: 0 auto; text-align: center; font: 200 20px/20px '微软雅黑'; position: relative; z-index: 99; height: 60px; padding-top: 30px; letter-spacing: .08em; text-indent: .08em; text-shadow: 0 0 6px rgba(0, 0, 0, .08); border-bottom: 1px dashed #57acf6; box-shadow: 0 5px 5px rgba(0, 0, 0, .08); border-radius: 5px}
 .ulTRANSCITIES li{width: 940px; display: table; min-height: 140px; background: white; margin-bottom: 10px; border-radius: 5px; padding-bottom: 8px}
 .ulTRANSCITIES li::before{content: ""; display: block; width: 0; height: 0; background: none; position: absolute; border-top: 40px solid #57acf6; border-right: 44px solid transparent; display: block; box-shadow: 0 0 4px rgba(0, 0, 0, .16)inset}
 .ulTRANSCITIES li .zMoreInfo{width: 282.5px; height: initial; background: none; position: absolute; right: 5px; margin-top: 50px;}
@@ -34,7 +36,7 @@
 .ulTRANSCITIES li .split .info div:nth-child(5) span::after{content: "全部折叠"; display: inline-block; padding: 8px}
 .ulTRANSCITIES li .split .info div:nth-child(5){float: right; width: 90px; height: 38px; font: 400 14px/22px '微软雅黑'; text-align: center; display: none}
 
-.splits p{height: 25px; background: white; width: 70%;  margin: 0 auto 0 0; cursor: pointer; box-shadow: 0 0 2px rgba(0, 0, 0, .06)inset; 
+.splits p{height: 25px; background: white; width: 70%;  margin: 0 auto 0 0; cursor: pointer; box-shadow: 0 0 2px rgba(0, 0, 0, .06)inset; position: relative; z-index: 9;
     transition-property: all;
     transition-duration: 0.4s;}
 .splits p:hover{box-shadow: 0 0 8px rgba(0, 0, 0, .2) inset}
@@ -47,11 +49,13 @@
 .circleSpanBUS{background: #f9e842 url('../img/bus.svg') no-repeat center; background-size: 14px}
 .circleSpanPLANE{background: #42a5f5 url('../img/plane.svg') no-repeat center; background-size: 14px}
 .circleSpanSHIP{background: #e44d26 url('../img/ship.svg') no-repeat center; background-size: 14px}
-.splits .expandSection{display: none; width: 70%; height: auto; background: #57acf6; box-shadow: 0 0 10px rgba(0, 0, 0, .1) inset; margin: 0;}
+.splits .expandSection{display: none; width: 70%; height: auto; background: #57acf6; box-shadow: 0 0 10px rgba(0, 0, 0, .1) inset; margin: 0; padding-top: 20px}
 .splits .expandSection.toFlex{display: flex; justify-content: center; flex-wrap: wrap}
-.splits .expandSection div{display: inline-block; width: 80px; height: 28px; text-align: center; font: 200 14px/28px '微软雅黑'; margin: 10px 0}
+.splits .expandSection div{display: inline-block; width: 80px; height: 28px; text-align: center; font: 200 14px/28px '微软雅黑'; margin: 10px 0; margin-bottom: 0; background: green}
 /* .splits .expandSection.toFlex div{opacity: 1} */
 .Normal.zTRAIN .split .info div:nth-child(1) span{background-color: #26a69a}
 .Normal.zBUS .split .info div:nth-child(2) span{background-color: #f9e842}
 .Normal.zPLANE .split .info div:nth-child(3) span{background-color: #42a5f5}
 .Normal.zSHIP .split .info div:nth-child(4) span{background-color: #e44d26}
+.outTHEInfo{width: 658px; display: none; height: 20px; position: absolute; margin-top: -20px; z-index: 1;}
+.PJ, .HS, .OTHERINFO{float: left; display: block; width: calc(100%/3); height: 20px; background: rgba(255, 255, 255, .4); text-align: center; box-shadow: 0 0 6px rgba(0, 0, 0, .2) inset; font: 200 14px/20px 'Neue'; letter-spacing: .08em; text-indent: .08em; text-shadow: 0 0 5px rgba(0, 0, 0, .16)}
