--- a/html/detailsHtml/css/details.css
+++ b/html/detailsHtml/css/details.css
@@ -49,7 +49,7 @@ li{list-style-type: none}
 .headerContent{ height: 100%; width: 80%; background: none; margin: 0 auto; }
 .siteName{width: 140px; height: 100%; background: none; float: left; }
 .siteName a {color: #000!important; }
-.siteName img{display: block; padding: 18px; float: left}
+.siteName img{display: block; padding: 18px 0; float: left; width: 32px}
 .siteName span{float: left; text-align: center; padding: 24px 0; font: 800 20px/21.5px '宋体'; letter-spacing: .1em; text-shadow: 0 0 10px rgba(0, 0, 0, .1)}
 .siteContents{width: 340px; height: 100%; float: right; background: none; display: flex; flex-wrap: nowrap; text-align: center; }
 .siteContents li{text-indent: 3px; width: 60px; letter-spacing: 3px; padding-left: 8px; padding-top: 24px}
